Use font-family for comment button from active theme

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -19,6 +19,7 @@
         .c-replyform textarea {
             &:extend(.breeze-input all);
         }
+        #post-comments button,
         .c-replyform button {
             &:extend(.breeze-button all);
         }
