Improve fonts in tag cloud

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -49,6 +49,12 @@
             flex-wrap: wrap;
             column-gap: @2;
         }
+        &.block-tagclaud {
+            .largest {
+                font-size: 1.85rem;
+                line-height: 1.8rem;
+            }
+        }
     }
 
     // reset breeze styles
