--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -5,7 +5,7 @@
             font-size: revert;
         }
         .c-replyform button,
-        .post-list .post-header .post-title a,
+        .post-list .post-header h2.post-title a,
         .post-list .post-description,
         &.blog-post-view .post-description p {
             font-size: inherit;
@@ -100,8 +100,13 @@
             }
         }
     }
-    .post-list .post-content .post-read-more {
-        float: none !important;
+    .post-list {
+        li {
+            list-style: none;
+        }
+        .post-content .post-read-more {
+            float: none !important;
+        }
     }
     .c-post .p-info {
         display: flex;
@@ -151,6 +156,11 @@
         }
         li::marker {
             &:extend(.breeze-prose li::marker all);
+        }
+    }
+    .column.main {
+        .blog-widget-recent > h3 {
+            &:extend(.breeze-block-hero-title all);
         }
     }
 }
