--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -9,6 +9,9 @@
                         <item name="items" xsi:type="array">
                             <item name="Magefan_Blog/js/magefan-comments" xsi:type="array">
                                 <item name="path" xsi:type="string">Swissup_BreezeMagefanBlog/js/blog</item>
+                                <item name="import" xsi:type="array">
+                                    <item name="parent" xsi:type="string">Magefan_Blog/js/magefan-comments</item>
+                                </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">mfblog/general/enabled</param>
                                 </item>
