--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -8,9 +8,25 @@
                     <item name="default" xsi:type="array">
                         <item name="items" xsi:type="array">
                             <item name="Magefan_Blog/js/magefan-comments" xsi:type="array">
-                                <item name="path" xsi:type="string">Swissup_BreezeMagefanBlog/js/blog</item>
+                                <item name="path" xsi:type="string">Swissup_BreezeMagefanBlog/js/comments</item>
                                 <item name="import" xsi:type="array">
                                     <item name="parent" xsi:type="string">Magefan_Blog/js/magefan-comments</item>
+                                </item>
+                                <item name="load" xsi:type="array">
+                                    <item name="onReveal" xsi:type="array">
+                                        <item name="0" xsi:type="string">#post-comments</item>
+                                    </item>
+                                </item>
+                                <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
+                                    <param name="path">mfblog/general/enabled</param>
+                                </item>
+                            </item>
+                            <item name="Magefan_Blog/js/toc" xsi:type="array">
+                                <item name="path" xsi:type="string">Swissup_BreezeMagefanBlog/js/toc</item>
+                                <item name="load" xsi:type="array">
+                                    <item name="onReveal" xsi:type="array">
+                                        <item name="0" xsi:type="string">.mfblog-contents-toggle</item>
+                                    </item>
                                 </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">mfblog/general/enabled</param>
