--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -34,6 +34,9 @@
                             </item>
                             <item name="Magefan_Blog/js/lib/mfblogunveil" xsi:type="array">
                                 <item name="path" xsi:type="string">Magefan_Blog/js/lib/mfblogunveil</item>
+                                <item name="load" xsi:type="array">
+                                    <item name="onRequire" xsi:type="boolean">true</item>
+                                </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">mfblog/general/enabled</param>
                                 </item>
