Fixed product listing styles

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -23,6 +23,9 @@
         .c-replyform button {
             &:extend(.breeze-button all);
         }
+        &.blog-post-view .products-grid .product-item:nth-child(n) {
+            margin: 0;
+        }
     }
     .widget {
         &.blog-search {
