Fixed listing columns count at blog page

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -24,6 +24,7 @@
             &:extend(.breeze-button all);
         }
         &.blog-post-view .products-grid .product-item:nth-child(n) {
+            --listing-grid-item-margin: 0px;
             margin: 0;
         }
     }
